--- a/tags/templates/page/1/index.html
+++ b/tags/templates/page/1/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <title>http://example.org/tags/templates/</title>
-    <link rel="canonical" href="http://example.org/tags/templates/">
+    <title>http://smjune.github.com/Webdoploy/tags/templates/</title>
+    <link rel="canonical" href="http://smjune.github.com/Webdoploy/tags/templates/">
     <meta name="robots" content="noindex">
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0; url=http://example.org/tags/templates/">
+    <meta http-equiv="refresh" content="0; url=http://smjune.github.com/Webdoploy/tags/templates/">
   </head>
 </html>
